--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -2,6 +2,7 @@
 {% block body %}
 <form action="/search" method="GET">
   <input type="text" name="title" placeholder="book title" required />
+  <input type="text" name="page" hidden required value="1" />
   <input type="submit" value="Search" />
 </form>
 {% endblock %}
