--- a/templates/error.html
+++ b/templates/error.html
@@ -1,3 +1,4 @@
-An error occured! That's all we know.
-
-{{ err }}
+{% extends "layout.html" %}
+{% block body %}
+<p>An error occured! {{ err }}</p>
+{% endblock %}
